src/riot-rs-macros/tests/ui/config_conflicting_config_kind.stderr
error: custom attribute panicked
 --> tests/ui/config_conflicting_config_kind.rs:9:1
  |
9 | #[riot_rs::config(network, usb)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: a separate function is required for `usb` configuration
